--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <a class="btn btn-primary btn-lg" href="#" role="button">Pelajari Selanjutnya</a>
         </div>
         <div class="col">
-            <img class="float-right" widht="500px" height="500px" src="images/hero1.png" src="images/hero1.png" alt="Ini Contoh Image">
+            <img class="float-right" width="500px" height="500px" src="images/hero1.png" src="images/hero1.png" alt="Ini Contoh Image">
         </div>
     </div>
 </div>
