--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <!-- START OF JUMBOTRON -->
 <div class="jumbotron bg-transparent">
     <div class="row">
-        <div class="col">
+        <div class="col text-center my-auto">
             <h1 class="display-3 text-white drop-shadow">Yoghurt Good</h1>
             <p class="lead">Minuman Sehat Pelega Dahaga Dengan Susu Pilihan Peternak Terbaik Dikelasnya</p>
             <a class="btn btn-primary btn-lg" href="#" role="button">Pelajari Selanjutnya</a>
