--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
         rel="stylesheet">
 </head>
 
-</head>
-
 <!-- START OF NAVIGATION BAR -->
 <nav class="navbar navbar-expand-lg navbar-light bg-transparent mr-4 ml-4 pt-3">
     <a class="navbar-brand" href="#">Yudha Gana</a>
@@ -69,7 +67,8 @@
             <a class="btn btn-primary btn-lg" href="#" role="button">Pelajari Selanjutnya</a>
         </div>
         <div class="col">
-            <img class="float-right" width="500px" height="500px" src="images/hero1.png" src="images/hero1.png" alt="Ini Contoh Image">
+            <img class="float-right" width="500px" height="500px" src="images/hero1.png" src="images/hero1.png"
+                alt="Ini Contoh Image">
         </div>
     </div>
 </div>
