--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             <li class="nav-item active">
                 <a class="nav-link" href="#">Beranda <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="#">Tentang Kami</a>
             </li>
-            <li class="nav-item dropdown">
+            <li class="nav-item  active dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
                     Menu
@@ -49,7 +49,7 @@
                     <a class="dropdown-item" href="#">Atau Mau Bayar Pulsa</a>
                 </div>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link disabled" href="#">Pesan Offline</a>
             </li>
         </ul>
